Update vs project file

--- a/projects/vs14/zlib.vcxproj
+++ b/projects/vs14/zlib.vcxproj
@@ -419,7 +419,7 @@ ENDLOCAL</Command>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\include;$(ProjectDir)..\..;$(OutDir)..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ProgramDataBaseFileName>$(OutDir)$(TargetName).pdb</ProgramDataBaseFileName>
-      <PreprocessorDefinitions>_WINDOWS;WIN32;_DEBUG;DEBUG;_USRDLL;_WIN32_WINNT=0x0502; _CRT_SECURE_NO_WARNINGS;ASMV;ASMINF;ZLIB_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ZLIB_DLL;_WINDOWS;WIN32;_DEBUG;DEBUG;_USRDLL;_WIN32_WINNT=0x0502; _CRT_SECURE_NO_WARNINGS;ASMV;ASMINF;ZLIB_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BrowseInformation>false</BrowseInformation>
       <AssemblerOutput>AssemblyAndSourceCode</AssemblerOutput>
       <AssemblerListingLocation>$(OutDir)..\..\asm\$(PlatformTarget)\$(Configuration)\$(ConfigurationType)\$(ProjectName)\</AssemblerListingLocation>
@@ -483,7 +483,7 @@ ENDLOCAL</Command>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\include;$(ProjectDir)..\..;$(OutDir)..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ProgramDataBaseFileName>$(OutDir)$(TargetName).pdb</ProgramDataBaseFileName>
-      <PreprocessorDefinitions>_WINDOWS;WIN32;_DEBUG;DEBUG;_USRDLL;_WIN32_WINNT=0x0502; _CRT_SECURE_NO_WARNINGS;ASMV;ASMINF;ZLIB_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ZLIB_DLL;_WINDOWS;WIN32;_DEBUG;DEBUG;_USRDLL;_WIN32_WINNT=0x0502; _CRT_SECURE_NO_WARNINGS;ASMV;ASMINF;ZLIB_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BrowseInformation>false</BrowseInformation>
       <AssemblerOutput>AssemblyAndSourceCode</AssemblerOutput>
       <AssemblerListingLocation>$(OutDir)..\..\asm\$(PlatformTarget)\$(Configuration)\$(ConfigurationType)\$(ProjectName)\</AssemblerListingLocation>
@@ -548,7 +548,7 @@ ENDLOCAL</Command>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\include;$(ProjectDir)..\..;$(OutDir)..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ProgramDataBaseFileName>$(OutDir)$(TargetName).pdb</ProgramDataBaseFileName>
-      <PreprocessorDefinitions>_WINDOWS;WIN32;_NDEBUG;NDEBUG;_USRDLL;_WIN32_WINNT=0x0502; _CRT_SECURE_NO_WARNINGS;ASMV;ASMINF;ZLIB_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ZLIB_DLL;_WINDOWS;WIN32;_NDEBUG;NDEBUG;_USRDLL;_WIN32_WINNT=0x0502; _CRT_SECURE_NO_WARNINGS;ASMV;ASMINF;ZLIB_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BrowseInformation>false</BrowseInformation>
       <AssemblerOutput>AssemblyAndSourceCode</AssemblerOutput>
       <AssemblerListingLocation>$(OutDir)..\..\asm\$(PlatformTarget)\$(Configuration)\$(ConfigurationType)\$(ProjectName)\</AssemblerListingLocation>
@@ -615,7 +615,7 @@ ENDLOCAL</Command>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <AdditionalIncludeDirectories>$(ProjectDir);$(ProjectDir)..\include;$(ProjectDir)..\..;$(OutDir)..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ProgramDataBaseFileName>$(OutDir)$(TargetName).pdb</ProgramDataBaseFileName>
-      <PreprocessorDefinitions>_WINDOWS;WIN32;_NDEBUG;NDEBUG;_USRDLL;_WIN32_WINNT=0x0502; _CRT_SECURE_NO_WARNINGS;ASMV;ASMINF;ZLIB_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>ZLIB_DLL;_WINDOWS;WIN32;_NDEBUG;NDEBUG;_USRDLL;_WIN32_WINNT=0x0502; _CRT_SECURE_NO_WARNINGS;ASMV;ASMINF;ZLIB_DLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ShowIncludes>false</ShowIncludes>
       <BrowseInformation>false</BrowseInformation>
       <AssemblerOutput>AssemblyAndSourceCode</AssemblerOutput>
